feito: carossel da index e css do mesmo

--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -9,7 +9,7 @@
     <title>Melhore seu Treinamento</title>    
   </head>
   <body>
-    <header>
+    <nav>
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
@@ -60,7 +60,7 @@
       <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
-    </header>
+    </nav>
     <main>
       <div class="herder">     
         <img src="../images/melhorTreino.jpg" alt="imagem de contato" class="imgTraining">
@@ -227,7 +227,6 @@
       </section>     
     </footer>
     <script src="../JS/header.js"></script>
-    <script src="../JS/script.js"></script>
   </body>
 </html>
 =======
