--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -14,7 +14,7 @@
      <title>Carrinho de Compras</title>
   </head>
   <body>
-    <header>
+    <nav>
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
@@ -65,9 +65,9 @@
       <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
-    </header>
-    <div class="container">
-      <h1>Escolha o Seu Plano</h1>
+    </nav>
+    <main class="flat">
+      <h1 class="herderTraining">Escolha o Seu Plano</h1>
       <div class="row">
         <div class="col-md-4">
           <div class="card">
@@ -136,9 +136,7 @@
           </div>
         </div>
       </div>
-    </div>
-
-
+    </main>
     <footer class="footer">
       <section>
         <img src="../images/4.png" alt="logotipo da academia" class="footerLogo" />
@@ -260,6 +258,5 @@
   </section>       
     </footer>
     <script src="../JS/header.js"></script>
-    <script src="../JS/script.js"></script>
   </body>
 </html>
