--- a/assets/pages/depoimentos.html
+++ b/assets/pages/depoimentos.html
@@ -10,7 +10,7 @@
     
 </head>
   <body>
-    <header>
+    <nav>
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
@@ -61,11 +61,11 @@
       <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
-    </header>
+    </nav>
     <main >
       <div class="herder">     
-        <img src="../images/depoimento1.jpg" alt="imagem de contato" class="imgTestimony">        
-        <h1>Depoimentos</h1>
+        <img src="../images/depoimentos~mv2.webp" alt="imagem de contato" class="imgTestimony">        
+        <h1 class="herderTraining">Depoimentos</h1>
       </div>
       <section class="testimony">
         <h2 >Depoimento de Maria</h2>
@@ -213,6 +213,5 @@
       </section>     
     </footer>
     <script src="../JS/header.js"></script>
-    <script src="../JS/script.js"></script>
   </body>
 </html>
