--- a/assets/pages/galeria.html
+++ b/assets/pages/galeria.html
@@ -11,7 +11,7 @@
    
   </head>
   <body>
-    <header>
+    <nav>
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
@@ -62,7 +62,7 @@
       <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
-    </header>
+    </nav>
     <main class="geral">
       <h1>Galeria de Fotos</h1>
       <section class="photo-gallery">
