--- a/assets/pages/sobre.html
+++ b/assets/pages/sobre.html
@@ -11,7 +11,7 @@
    
   </head>
   <body>
-    <header>
+    <nav>
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
@@ -62,11 +62,11 @@
       <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
-    </header>
+    </nav>
     <main>
       <div class="herder">     
         <img src="../images/Imagem do WhatsApp de 2023-11-01 à(s) 10.38.18_bc0a0149.jpg" alt="imagem de contato" class="imgTerm">
-         <h1>Sobre a Academia</h1>
+         <h1 class="herderTraining">Sobre a Academia</h1>
        </div>        
       <section class="about">
         <h2>História</h2>
@@ -237,7 +237,6 @@
         </p>  
   </section>     
     </footer>
-    <script src="../JS/script.js"></script>
     <script src="../JS/header.js"></script>
   </body>
 </html>
