--- a/assets/pages/faq.html
+++ b/assets/pages/faq.html
@@ -10,7 +10,7 @@
     
   </head>
   <body>
-    <header>
+    <nav>
       <div class= "overlay" id="myNav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
         <div class="linkPrimarary">
@@ -61,7 +61,7 @@
       <button class="nav-button" onclick="openNav()" title="botão de menu">
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
-    </header>
+    </nav>
     <main>
       <div class="herder">     
         <img src="../images/faq.jpg" alt="imagem de contato" class="imgFAQ">
@@ -218,6 +218,5 @@
   </section>     
     </footer>
     <script src="../JS/header.js"></script>
-    <script src="../JS/script.js"></script>
   </body>
 </html>
