--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -10,7 +10,7 @@
    
 </head>
 <body>
-  <header>
+  <nav>
     <div class= "overlay" id="myNav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
       <div class="linkPrimarary">
@@ -61,7 +61,7 @@
     <button class="nav-button" onclick="openNav()" title="botão de menu">
       <i class="fa-solid fa-bars fa-2x"></i>
     </button>
-  </header>
+  </nav>
 
   <!--SetordeNavegaçãoInscrição-->
     
