--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -4,14 +4,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css">
     <link rel="stylesheet" href="../CSS/style.css">
+    
     <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
+    
     <title>Área de Membros</title>
    
 </head>
 <body>
-  <header>
+  <nav>
     <div class= "overlay" id="myNav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
       <div class="linkPrimarary">
@@ -216,6 +220,5 @@
   </footer>
   <script src="../JS/membros.js"></script>
   <script src="../JS/header.js"></script>
-  <script src="../JS/script.js"></script>
-  </body>
+</body>
 </html>
