--- a/assets/pages/politicas.html
+++ b/assets/pages/politicas.html
@@ -11,7 +11,7 @@
   
 </head>
 <body>
-  <header>
+  <nav>
     <div class= "overlay" id="myNav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
       <div class="linkPrimarary">
@@ -62,7 +62,7 @@
     <button class="nav-button" onclick="openNav()" title="botão de menu">
       <i class="fa-solid fa-bars fa-2x"></i>
     </button>
-  </header>
+  </nav>
     <main>
       <div class="herder">     
         <img src="../images/politica-privacidade.jpg" alt="imagem de contato" class="imgPriv">
@@ -243,6 +243,5 @@
       </section>     
     </footer>
     <script src="../JS/header.js"></script>
-    <script src="../JS/script.js"></script>
   </body>
 </html>
