feito: pagian de galerry

--- a/assets/pages/galeria.html
+++ b/assets/pages/galeria.html
@@ -4,9 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="../CSS/style.css">
+
     <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
+    
+    <link rel="stylesheet" href="../CSS/style.css">
+    
     <title>Galeria de Fotos</title>
    
   </head>
@@ -63,33 +65,40 @@
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
     </nav>
-    <main class="geral">
-      <h1>Galeria de Fotos</h1>
+    <main>
+      <h1>Galeria de Fotos</h1> 
       <section class="photo-gallery">
-        <h2>Fotos da Academia</h2>
+        <h2>Equipamentos de última geração</h2>   
         <div class="gallery-item">
-          <img src="academia1.jpg" alt="Academia Fitness - Equipamentos" />
-          <p>Equipamentos de última geração</p>
-        </div>
-        <div class="gallery-item">
-          <img src="academia2.jpg" alt="Academia Fitness - Aulas de Grupo" />
-          <p>Aulas de grupo dinâmicas</p>
-        </div>
-        <div class="gallery-item">
-          <img
-            src="academia3.jpg"
-            alt="Academia Fitness - Área de Musculação"
-          />
-          <p>Área de musculação espaçosa</p>
-        </div>
-        <div class="gallery-item">
-          <img
-            src="academia4.jpg"
-            alt="Academia Fitness - Membros Satisfeitos"
-          />
-          <p>Nossos membros satisfeitos</p>
+          <img src="../images/musculação - 1.jpg" alt="Equipamentos de última geração de Musculação"  class="gallery-image"/>
+          <img src="../images/musculação - 2.jpg" alt="Equipamentos de última geração de Musculação" class="gallery-image"/>
+          <img src="../images/musculação - 3.jpg" alt="Equipamentos de última geração de Musculação" class="gallery-image"/>
         </div>
       </section>
+      <section class="photo-gallery">
+        <h2>Aulas de grupo dinâmicas</h2>   
+        <div class="gallery-item">
+          <img src="../images/aula dinamica - 1.jpg" alt="Aulas de grupo dinâmicas"  class="gallery-image"/>
+          <img src="../images/aula dinamica - 2.jpg" alt="Aulas de grupo dinâmicas" class="gallery-image"/>
+          <img src="../images/aula dinamica - 3.jpg" alt="Aulas de grupo dinâmicas" class="gallery-image"/>
+        </div>
+      </section>
+      <section class="photo-gallery">
+        <h2>Aulas de Zumba</h2>   
+        <div class="gallery-item">
+          <img src="../images/images zumba - 1.jpg" alt="Aulas de Zumba"  class="gallery-image"/>
+          <img src="../images/images zumba - 2.jpg" alt="Aulas de Zumba" class="gallery-image"/>
+          <img src="../images/images zumba - 3.jpg" alt="Aulas de Zumba" class="gallery-image"/>
+        </div>
+      </section>  
+      <section class="photo-gallery">
+        <h2>Aulas de Pilates</h2>   
+        <div class="gallery-item galerry">
+          <img src="../images/aula pilates - 1.jpg" alt="Aulas de Pilates"  class="gallery-image"/>
+          <img src="../images/aula pilates - 2.jpg" alt="Aulas de Pilates" class="gallery-image"/>
+          <img src="../images/aula pilates - 3.jpg" alt="Aulas de Pilates" class="gallery-image"/>
+        </div>
+      </section>      
     </main>
     <footer class="footer">
       <section>
@@ -211,8 +220,7 @@
             &copy; 2023 Orange Fitness
         </p>  
   </section>     
-    </footer>
+    </footer>    
     <script src="../JS/header.js"></script>
-    <script src="../JS/script.js"></script>
   </body>
 </html>
