--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -201,12 +201,6 @@
         </div> 
         </div>
         <div class="sidebar">
-          <button type="button" class="sidebar__btn-close">
-            <svg viewBox="0 0 256 256" width="100%" height="100%">
-              <path fill="none" d="M0 0h256v256H0z"></path>
-              <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="12" d="M200 56L56 200M200 200L56 56"></path>
-            </svg>
-          </button>
           <div class="sidebar__sumary">
             <h3 class="sidebar__sub"> Detalhe da compra</h3>
             <button class="button">Continuar oara cadastro</button>
@@ -216,7 +210,7 @@
               <h2 class = "plan-card-b__title">Carrinho de Compras</h2>
               <ul id="cart" class="list-group"></ul>
               <p>Total: <span id="total">R$0</span></p>
-              <button class="button" id="checkout">Finalizar Compra<     </button>
+              <button class="button" id="checkout">Finalizar Compra    </button>
             </div>
           </div>   
         </div>
