Fix: div class page centralizada na pg inscricao

--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -65,7 +65,7 @@
 
   <!--SetordeNavegaçãoInscrição-->
     
-  <div class ="page">
+  <div class ="page" >
     <form method="POST" class="formLogin">
       <h1>Solicitação de Matrícula</h1>
       <p>Preencha os campos abaixo</p>
@@ -96,6 +96,14 @@
           <input type="submit" value="Enviar Solicitação" class="btn" />         
         </form>
     </div>     
+    <style>
+      .page {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh; /* Optional: Adjust the height as needed */
+      }
+    </style>
     <footer class="footer">
       <section>
         <img src="../images/4.png" alt="logotipo da academia" class="footerLogo" />
