--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -31,7 +31,7 @@
           </a>     
         </div>       
         <div class="search-box">
-          <input type="text" class="search-text" placeholder="Pesquisar.....">
+          <input type="text" class="search-text" placeholder="Pesquisar...">
             <a class="search-btn">
               <img class="loupe-blue" src="../images/loupe-blue.svg" alt="lupa de pesquisa azul" width="25px"   height="25px">
               <img class="loupe-white" src="../images/loupe-white.svg" alt="lupa de pesquisa branca" width="25px"   height="25px">
