--- a/index.html
+++ b/index.html
@@ -116,11 +116,13 @@
   </header> 
   <main>     
     <section class="hours">
-      <img src="./assets/images/agendar horario.jpg" alt="imagem de agende seu horario" class="hours__image">
+      <a href="./assets/pages/membros.html">
+        <img src="./assets/images/agendar horario.jpg" alt="imagem de agende seu horario" class="hours__image">
+      </a>
       <div class="hours__copy">
         <h2>Horário de Funcionamento</h2>
         <p>Segunda a Sexta: 6h - 22h</p>
-        <p >Sábado:8h - 18h</p>
+        <p >Sábado: 8h - 18h</p>
         <p>Domingo: Fechado</p>  
       </div>      
     </section>
