feito:pagina de login

--- a/assets/pages/loginMembros.html
+++ b/assets/pages/loginMembros.html
@@ -110,7 +110,7 @@
       </form>
     </div>
     <div class="container b-container" id="b-container">
-      <form class="form" id="b-form" method="post" action="index.html">
+      <form class="form" id="b-form" method="post" action="../php/signin.php">
         <h2 class="form_title title">Faça login no site</h2>
         <div class="form__icons">
           <img
@@ -243,6 +243,6 @@
     </section>     
   </footer>
   <script src="../JS/header.js"></script>
-  <script src="../JS/login.js"></script>
+  <script src="../JS/loginMembro.js"></script>
 </body>
 </html>
