--- a/assets/pages/inscricao.html
+++ b/assets/pages/inscricao.html
@@ -86,6 +86,13 @@
             <option value="plano3">Plano VIP</option>
           </select>
 
+          <label for="plano">Escolha seu adicionais no plano de assinatura</label>
+          <select id="plano" name="plano">
+            <option value="plano1">FIT COACH</option>
+            <option value="plano2">FIT NUTRI + FIT BODY</option>
+            <option value="plano3">FIT BODY</option>
+          </select>
+
           <label for="pagamento">Escolha sua forma de pagamento</label>
           <select id="pagamento" name="pagamento">
             <option value="cartao">Cartão de Crédito</option>
@@ -95,16 +102,8 @@
           <br>
           <input type="submit" value="Enviar Solicitação" class="btn" />         
         </form>
-    </div>     
-    <style>
-      .page {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh; /* Optional: Adjust the height as needed */
-      }
-    </style>
-    <footer class="footer">
+  </div>     
+  <footer class="footer">
       <section>
         <img src="../images/4.png" alt="logotipo da academia" class="footerLogo" />
       </section>
