--- a/assets/pages/programas.html
+++ b/assets/pages/programas.html
@@ -66,38 +66,57 @@
     <main class="geral">
       <h1>Programas de Treinamentos</h1>
       <section class="program">
-        <h2>Musculação</h2>
-        <p>
-          Aproveite nossa academia de última geração com uma variedade de
-          equipamentos de musculação. Nossos instrutores certificados estão à
-          disposição para ajudá-lo a atingir seus objetivos.
-        </p>
-        <p>Horários:<br />Segunda a Sexta: 6h - 22h<br />Sábado: 8h - 18h</p>
-        <p>Preços: A partir de R$50/mês</p>
-      </section>
-      <section class="group-classes">
-        <h2>Aulas de Grupo</h2>
-        <p>
-          Oferecemos uma variedade de aulas de grupo, incluindo spinning, zumba,
-          pilates e muito mais. Nossos instrutores especializados garantem que
-          você tenha uma experiência divertida e eficaz.
-        </p>
-        <p>
-          Horários:<br />Consulte o nosso calendário para os horários das aulas.
-        </p>
-        <p>Preços: Incluído na assinatura mensal</p>
-      </section>
-      <section class="yoga">
-        <h2>Yoga</h2>
-        <p>
-          Descubra os benefícios do yoga para o corpo e a mente. Nossas aulas de
-          yoga são adequadas para todos os níveis, desde iniciantes até
-          avançados.
-        </p>
-        <p>
-          Horários:<br />Terça e Quinta: 18h - 19h30<br />Sábado: 10h - 11h30
-        </p>
-        <p>Preços: A partir de R$30/aula</p>
+        <div class="card">
+          <div class="face front">
+            <img src="../images/musculação - 2.jpg" alt="img de musculação">
+            <h2>Musculação</h2>
+          </div>
+            <div class="face back">
+              <p>
+                Aproveite nossa academia de última geração com uma variedade de
+                equipamentos de musculação. Nossos instrutores certificados estão à
+                disposição para ajudá-lo a atingir seus objetivos.
+              </p>
+              <p>Horários:<br />Segunda a Sexta: 6h - 22h<br />Sábado: 8h - 18h</p>
+              <p>Preços: A partir de R$50/mês</p>
+            </div>
+        </div>
+        
+        <div class="card">
+          <div class="face front">
+            <img src="../images/aula pilates - 1.jpg" alt="image de yoga">
+            <h2>Yoga</h2>
+          </div>
+          <div class="face back">
+            <p>
+              Descubra os benefícios do yoga para o corpo e a mente. Nossas aulas de
+              yoga são adequadas para todos os níveis, desde iniciantes até
+              avançados.
+            </p>
+            <p>
+              Horários:<br />Terça e Quinta: 18h - 19h30<br />Sábado: 10h - 11h30
+            </p>
+            <p>Preços: A partir de R$30/aula</p>
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="face front">
+            <img src="../images/images zumba - 1.jpg" alt="image em grupo">
+            <h2>Aulas de Grupo</h2>
+          </div>
+          <div class="face back">
+            <p>
+              Oferecemos uma variedade de aulas de grupo, incluindo spinning, zumba,
+              pilates e muito mais. Nossos instrutores especializados garantem que
+              você tenha uma experiência divertida e eficaz.
+            </p>
+            <p>
+              Horários:<br />Consulte o nosso calendário para os horários das aulas.
+            </p>
+            <p>Preços: Incluído na assinatura mensal</p>
+          </div>
+        </div>
       </section>
     </main>
     <footer class="footer">
