Update CSS and HTML for programs page (generated by blackbox.ai )

--- a/assets/pages/programas.html
+++ b/assets/pages/programas.html
@@ -63,7 +63,7 @@
         <i class="fa-solid fa-bars fa-2x"></i>
       </button>
     </nav>
-    <main class="geral">
+    <main>
       <h1>Programas de Treinamentos</h1>
       <section class="program">
         <div class="card">
