feito: validadeção de formulario

--- a/assets/pages/blog.html
+++ b/assets/pages/blog.html
@@ -34,7 +34,7 @@
             <div class="linkSecundary-button-login">
               <a href="./loginMembros.html" title="Entre">Entre</a> 
                             ou 
-              <a href="./inscricao.html" title="Cadastre-se">Cadastre-se</a>
+              <a href="/loginMembros.html" title="Cadastre-se">Cadastre-se</a>
             </div>   
           </div>
           <div class="linkSecundary-button-menu">
@@ -192,7 +192,7 @@
           <div  class="footerLinkPage">
             <h2 class="footerTitler">Planos</h2>
             <ul>
-              <li><a href="./inscricao.html">Matrícula</a></li>
+              <li><a href="./carrinho.html">Matrícula</a></li>
               <li><a href="./contato.html">Contatos</a></li>
             </ul>
           </div>
@@ -210,7 +210,7 @@
       </section>
       <section class="footerDisclaimer">
             <p class="footerDisclaimer-pg">
-                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"></a>
+                *Consulte as condições promocionais e regulamentos na página: <a href="./contato.html"> Contato</a>*
             </p>              
             <p class="footerDisclaimer-pg">
                 <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
