--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     <div class= "overlay" id="myNav">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>    
       <div class="linkPrimarary">
-      <a href="tel:0800 6060 415" class="linkPrimarary-tel">TELEVENDAS 0800 6060 415</a>
-      <a href="./assets/pages/blog.html"  rel="noopener noreferrer">Blog</a>
-      <a href="./assets/pages/depoimentos.html"  rel="noopener noreferrer">Depoimentos</a>
-      <a href="./assets/pages/contato.html"  rel="noopener noreferrer">Contato</a>
+        <a href="tel:0800 6060 415" class="linkPrimarary-tel">TELEVENDAS 0800 6060 415</a>
+        <a href="./assets/pages/blog.html"  rel="noopener noreferrer">Blog</a>
+        <a href="./assets/pages/depoimentos.html"  rel="noopener noreferrer">Depoimentos</a>
+        <a href="./assets/pages/contato.html"  rel="noopener noreferrer">Contato</a>
       </div>      
       <div class="linkSecundary">    
         <div class="logo">
@@ -49,7 +49,7 @@
           <div class="linkSecundary-button-login">
             <a href="./assets/pages/loginMembros.html" title="Entre">Entre</a> 
                           ou 
-            <a href="./assets/pages/inscricao.html" title="Cadastre-se">Cadastre-se</a>
+            <a href="./assets/pages/loginMembros.html" title="Cadastre-se">Cadastre-se</a>
           </div>   
         </div>
         <div class="linkSecundary-button-menu">
@@ -132,7 +132,7 @@
       </div>      
     </section>
     <section class="maps">
-     <iframe frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Rua+Benjamin+Constant,+960+-+Centro,+Santa+Maria+-+RS,+Brasil&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8">
+     <iframe frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Rua+Benjamin+Constant,+960+-+Centro,+Santa+Maria+-+RS,+Brasil&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" title="mapa de localização da academia">
       </iframe>
     </section>   
   </main>
@@ -198,6 +198,7 @@
             href="https://www.twitter.com/orangefitness"
             target="_blank"
             rel="noopener noreferrer"
+            title="logo do twitter"
           >
           <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M389.2 48h70.6L305.6 224.2 487 464H345L233.7 318.6 106.5 464H35.8L200.7 275.5 26.8 48H172.4L272.9 180.9 389.2 48zM364.4 421.8h39.1L151.1 88h-42L364.4 421.8z" fill="white"/></svg>
           </a>
@@ -206,7 +207,9 @@
           <a
             href="https://www.linkedin.com/company/orangefitness"
             target="_blank"
-            rel="noopener noreferrer">  
+            rel="noopener noreferrer"
+            title="logo do linkedin"
+            >  
             <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 448 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z" fill="white"/></svg>
           </a>
         </li>
@@ -228,7 +231,7 @@
         <div  class="footerLinkPage">
           <h2 class="footerTitler">Planos</h2>
           <ul>
-            <li><a href="./assets/pages/inscricao.html">Matrícula</a></li>
+            <li><a href="./assets/pages/loginMembros.html">Matrícula</a></li>
             <li><a href="./assets/pages/contato.html">Contatos</a></li>
           </ul>
         </div>
@@ -246,7 +249,7 @@
     </section>
     <section class="footerDisclaimer">
       <p class="footerDisclaimer-pg">
-          *Consulte as condições promocionais e regulamentos na página: <a href="./assets/pages/contato.html"></a>
+          *Consulte as condições promocionais e regulamentos na página:  <a href="./assets/pages/contato.html" > Contatos</a>*
       </p>              
       <p class="footerDisclaimer-pg">
           <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
