--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -222,7 +222,9 @@
               <h2 class = "plan-card-b__title">Carrinho de Compras</h2>
               <ul id="cart" class="list-group"></ul>
               <p>Total: <span id="total">R$0</span></p>
-              <button class="button" id="checkout">Finalizar Compra    </button>
+              <button class="button" id="checkout">
+                <a href="../pages/pagamentoCartao.html">Finalizar Compra </a>                   
+              </button>
             </div>
           </div>   
         </div>
