feito: arumado js da pagina de membros

--- a/assets/pages/membros.html
+++ b/assets/pages/membros.html
@@ -79,7 +79,7 @@
         <label for="class-time">Horário:</label>
         <input type="time" id="class-time">
         <label for="date-start">Data Início:</label>
-        <input type="date" id="date-start">
+        <input type="date" id="date-start" min="" required>
       </div>
       <div class="schedule-item__form">
         <button class="button" onclick="addNewClass()">Agendar</button> 
