alteraçoes texto botões carrinho

--- a/assets/pages/carrinho.html
+++ b/assets/pages/carrinho.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="shortcut icon" href="../images/3734orangelogo4.ico" type="image/x-icon">
 
@@ -34,9 +33,7 @@
           <div class="linkSecundary-button-menu">
             <h3>Bem-vindo</h3>
             <div class="linkSecundary-button-login">
-              <a href="./loginMembros.html" title="Entre">Entre</a> 
-                            ou 
-              <a href="./loginMembros.html" title="Cadastre-se">Cadastre-se</a>
+              <a href="./loginMembros.html" title="Entre">Entre</a> ou <a href="./loginMembros.html" title="Cadastre-se">Cadastre-se</a>
             </div>   
           </div>
           <div class="linkSecundary-button-menu">
@@ -76,7 +73,7 @@
                 <p class="plan-card-a__info">Zero</p>
               </li>
               <li class="plan-card-a__col plan-card-a__col--desktop">
-                <h5>Fideliade</h5>
+                <h5>Fidelidade</h5>
                 <p class="plan-card-a__info">12 meses</p>
               </li>
               <li class="plan-card-a__col">
@@ -84,8 +81,8 @@
               </li>
             </ul>
             <div class="plan-card-a__footer">
-              <p class="plan-card-a__description">Plano de acesso básico à academia.</p>
-              <button class="button btn" onclick="addToCart('Plano Básico', 50)">Adicionar ao Carrinho</button>
+              <p class="plan-card-a__description">Plano de acesso básico à academia</p>
+              <button class="button btn" onclick="addToCart('Plano Básico', 50)">Adicionar</button>
             </div>              
           </div> 
           <div class="plan-card-a plan-list-a__selected" >
@@ -101,7 +98,7 @@
                 <p class="plan-card-a__info">Zero</p>
               </li>
               <li class="plan-card-a__col plan-card-a__col--desktop">
-                <h5>Fideliade</h5>
+                <h5>Fidelidade</h5>
                 <p class="plan-card-a__info">12 meses</p>
               </li>
               <li class="plan-card-a__col">
@@ -109,8 +106,8 @@
               </li>
             </ul>
             <div class="plan-card-a__footer">
-              <p class="plan-card-a__description">Plano de acesso a duas modalidade de treinameto.</p>
-              <button class="button" onclick="addToCart('Plano Premium', 80)">Adicionar ao Carrinho</button>
+              <p class="plan-card-a__description">Plano de acesso a duas modalidade de treinamento</p>
+              <button class="button" onclick="addToCart('Plano Premium', 80)">Adicionar</button>
             </div>              
           </div>           
           <div class="plan-card-a plan-list-a__selected" >
@@ -126,7 +123,7 @@
                 <p class="plan-card-a__info">Zero</p>
               </li>
               <li class="plan-card-a__col plan-card-a__col--desktop">
-                <h5>Fideliade</h5>
+                <h5>Fidelidade</h5>
                 <p class="plan-card-a__info">Sem</p>
               </li>
               <li class="plan-card-a__col">
@@ -134,8 +131,8 @@
               </li>
             </ul>
             <div class="plan-card-a__footer">
-              <p class="plan-card-a__description">Plano VIP com acesso ilimitado a todas as instalações.</p>
-              <button class="button" onclick="addToCart('Plano VIP', 120)">Adicionar ao Carrinho</button>
+              <p class="plan-card-a__description">Plano VIP com acesso ilimitado a todas as instalações</p>
+              <button class="button" onclick="addToCart('Plano VIP', 120)">Adicionar</button>
             </div>              
           </div>
           </div>  
@@ -215,7 +212,7 @@
         <div class="sidebar">
           <div class="sidebar__sumary">
             <h3 class="sidebar__sub"> Detalhe da compra</h3>
-            <button class="button">Continuar para cadastro</button>
+            <button class="button">Cadastro</button>
           </div>
           <div class="plan-card">
             <div class="plan-card-b">
@@ -223,7 +220,7 @@
               <ul id="cart" class="list-group"></ul>
               <p>Total: <span id="total">R$0</span></p>
               <button class="button" id="checkout">
-                <a href="../pages/pagamentoCartao.html">Finalizar Compra </a>                   
+                <a href="../pages/pagamentoCartao.html">Finalizar</a>                   
               </button>
             </div>
           </div>   
@@ -346,7 +343,7 @@
             <a href="mailto:contato@orangefitness.com">contato@orangefitness.com</a>
         </p>   
         <p class="footerDisclaimer-pg">
-            &copy; 2023 Orange Fitness
+            &copy; 2024 Orange Fitness
         </p>  
   </section>       
     </footer>
